Fixed Tpyes not showing up and delink button style

--- a/src/Components/Card/PokeCard.module.scss
+++ b/src/Components/Card/PokeCard.module.scss
@@ -22,7 +22,7 @@
     transform-style: preserve-3d;
 
     &:hover {
-     .unlink, .typeTag{
+      .typeTag{
         transform: translateZ(40px);
       }
       .sprite img {
